<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sarangjoshi.uwcalendar.AddClassActivity"
    tools:showIn="@layout/activity_add_class">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/class_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Sidd Time 0" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/class_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_location"
            android:maxLines="1"
            android:singleLine="true"
            android:text="CSE 069" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/mondayCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="M" />

        <CheckBox
            android:id="@+id/tuesdayCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="T" />

        <CheckBox
            android:id="@+id/wednesdayCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="W" />

        <CheckBox
            android:id="@+id/thursdayCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Th" />

        <CheckBox
            android:id="@+id/fridayCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="F" />
    </LinearLayout>

    <!--
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/class_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_start"
            android:inputType="time"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/class_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_end"
            android:inputType="time"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
    -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showTimePickerDialog"
            android:text="@string/prompt_start" />

        <Button
            android:id="@+id/end_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showTimePickerDialog"
            android:text="@string/prompt_end" />
    </LinearLayout>

    <Button
        android:id="@+id/addClassBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addClass"
        android:text="@string/add_class" />

    <ListView
        android:id="@+id/error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>